Cosmetic changes, fixing touch effect on mobile

--- a/style.css
+++ b/style.css
@@ -4,9 +4,16 @@
     --display-bg-color:rgb(70, 70, 70);
     --display-text-color:rgb(0, 247, 0);
 }
+::selection {
+    color: none;
+    background: none;
+}
 body{
     margin:0px;
     background-color:var(--main-bg-color);
+}
+p{
+    cursor: default;
 }
 #container{  
     display:flex;
@@ -63,6 +70,7 @@ body{
     align-items: center;
     font-family: 'Lato', sans-serif;
     font-size: 30px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 @media only screen 
 and (min-width: 273px)
@@ -70,5 +78,10 @@ and (max-width: 1000px) {
     #calcContainer{
         width:90%;
     }
-    
+    .button{
+        font-size:90px;
+    }
+    #displayText{
+        font-size:90px;
+    }
 }
